# daylio-to-md-converter

./: .gitignore  Makefile  README.md  pyproject.toml
daylio2md/: __main__.py
sample/: input.csv  output.md
